# fullstack-showcase

./: README.md
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/dependencies/: validate_token.py
backend/app/api/endpoints/: bottles_endpoint.py
backend/app/config/: config.py
backend/app/db/: db_setup.py
backend/app/models/: bottle.py  user.py
backend/app/services/: bottle_service.py
backend/app/utils/: logs.py
backend/scripts/: start-dev.sh
backend/tests/: conftest.py
backend/tests/endpoint_tests/: test_bottles.py
frontend/: .eslintrc.cjs  .gitignore  README.md  index.html  package.json  tsconfig.json  vitest.config.ts
frontend/src/: App.scss  App.test.tsx  App.tsx  main.tsx
frontend/src/components/: AddBottleForm.scss  AddBottleForm.tsx  BottleBalanceSection.scss  BottleBalanceSection.tsx  BottleTable.scss  BottleTable.tsx
frontend/src/lib/: api.ts  format.ts
frontend/src/test/: setup.ts
frontend/src/types/: Bottle.ts
